<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.tfg.ui.funcionalidades.FuncionalidadesFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="169dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/logo_seeit"
        android:src="@drawable/ic_vector_eye"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/access_advice"
        android:layout_width="323dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:text="@string/access_advice"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/access_btn"
        android:layout_width="265dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        android:text="@string/access_btn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/access_advice" />

</androidx.constraintlayout.widget.ConstraintLayout>