<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imagePlaceholder"
            android:layout_width="355dp"
            android:layout_height="244dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/imagen_placeholder_descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vector_eye" />

        <TextView
            android:id="@+id/indicator_1"
            android:layout_width="230dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/traduccion_resultado"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_traducir" />

        <TextView
            android:id="@+id/traduccion_resultado"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator_1" />

        <Spinner
            android:id="@+id/spinner_target_language"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:entries="@array/paises"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/target_language" />

        <Spinner
            android:id="@+id/spinner_source_language"
            android:layout_width="211dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:entries="@array/paises"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/source_language" />

        <TextView
            android:id="@+id/source_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:text="@string/source_language"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePlaceholder" />

        <TextView
            android:id="@+id/target_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/target_language"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_source_language" />

        <Button
            android:id="@+id/boton_traducir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/boton_traducir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_target_language" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>